--- a/apps/docs/content/docs/vue/api-references/composable.mdx
+++ b/apps/docs/content/docs/vue/api-references/composable.mdx
@@ -91,7 +91,10 @@ but also on additional boolean values. This allows for multi-condition logic whe
 boolean must evaluate to true for the step to match. The boolean values can represent
 different state conditions or external factors that affect the step's visibility or behavior.
 
-> The first element of the array is the step ID, the following elements are the boolean values.
+<Callout type="info">
+  The first element of the array is the step ID, the following elements are the
+  boolean values.
+</Callout>
 
 <Tabs groupId="components" items={['SFC', 'JSX']} defaultValue="sfc">
   <Tab value="sfc">
