--- a/apps/docs/content/docs/vue/installation.mdx
+++ b/apps/docs/content/docs/vue/installation.mdx
@@ -6,27 +6,11 @@ icon: Rocket
 
 Choose your preferred package manager to install `@stepperize/vue`:
 
-<Tabs groupId="tool" items={['npm', 'yarn', 'pnpm', 'bun']} defaultValue="npm">
-  <Tab value="npm">
-  ```bash
-  npm install @stepperize/vue
-  ```
-  </Tab>
-  <Tab value="yarn">
-  ```bash
-  yarn add @stepperize/vue
-  ```
-  </Tab>
-  <Tab value="pnpm">
-  ```bash
-  pnpm install @stepperize/vue
-  ```
-  </Tab>
-  <Tab value="bun">
-  ```bash
-  bun add @stepperize/vue
-  ```
-  </Tab>
+<Tabs groupId="tool" items={["npm", "yarn", "pnpm", "bun"]} defaultValue="npm">
+  <Tab value="npm">```bash npm install @stepperize/vue ```</Tab>
+  <Tab value="yarn">```bash yarn add @stepperize/vue ```</Tab>
+  <Tab value="pnpm">```bash pnpm install @stepperize/vue ```</Tab>
+  <Tab value="bun">```bash bun add @stepperize/vue ```</Tab>
 </Tabs>
 
 ## Next Steps
