--- a/apps/docs/content/docs/react/installation.mdx
+++ b/apps/docs/content/docs/react/installation.mdx
@@ -4,30 +4,13 @@ description: How to install and set up @stepperize/react in your project
 icon: Rocket
 ---
 
-
 Choose your preferred package manager to install `@stepperize/react`:
 
-<Tabs groupId="tool" items={['npm', 'yarn', 'pnpm', 'bun']} defaultValue="npm">
-  <Tab value="npm">
-  ```bash
-  npm install @stepperize/react
-  ```
-  </Tab>
-  <Tab value="yarn">
-  ```bash
-  yarn add @stepperize/react
-  ```
-  </Tab>
-  <Tab value="pnpm">
-  ```bash
-  pnpm install @stepperize/react
-  ```
-  </Tab>
-  <Tab value="bun">
-  ```bash
-  bun add @stepperize/react
-  ```
-  </Tab>
+<Tabs groupId="tool" items={["npm", "yarn", "pnpm", "bun"]} defaultValue="npm">
+  <Tab value="npm">```bash npm install @stepperize/react ```</Tab>
+  <Tab value="yarn">```bash yarn add @stepperize/react ```</Tab>
+  <Tab value="pnpm">```bash pnpm install @stepperize/react ```</Tab>
+  <Tab value="bun">```bash bun add @stepperize/react ```</Tab>
 </Tabs>
 
 ## Next Steps
