--- a/apps/docs/content/docs/solid/index.mdx
+++ b/apps/docs/content/docs/solid/index.mdx
@@ -1,9 +1,47 @@
 ---
 title: Introduction
-description: A powerful library for creating flexible Stepper components in Solid
+description: A powerful library for creating flexible Stepper components in Solid JS
 icon: Album
 ---
 
-<Callout type="warn">
-  Both the documents and the Solid package are not yet ready.
-</Callout>
+# Stepperize: Simplifying Multi-Step Processes in Solid JS
+
+Stepperize is a versatile Solid JS library designed to streamline the creation of Stepper components. It empowers developers to build complex, multi-step processes with ease, allowing them to focus on business logic rather than implementation details.
+
+## Key Features
+
+- **Flexible Step Management**: Create linear or branching flows
+- **Headless Component**: Full control over styling and UI
+- **Conditional Rendering**: Dynamically adjust content based on user input
+- **State Management**: Built-in tools for handling step state
+
+## Core Concepts
+
+### Thinking in Steps
+
+Steppers break down complex workflows into manageable chunks, providing:
+
+- Clear navigation between steps
+- Visual progress indicators
+- Improved user experience for multi-stage processes
+
+**Common Use Cases**
+
+- User onboarding
+- Multi-page forms
+- E-commerce checkout
+- Product creation wizards
+- Tutorial walkthroughs
+- Surveys and questionnaires
+- Booking systems
+
+### Thinking in Flows
+
+Stepperize goes beyond linear progressions, enabling:
+
+- Conditional rendering
+- Branching paths
+- Dynamic form adjustments
+- Personalized user experiences
+- State-dependent UI changes
+- Multi-path processes
