docs: reorganize documentation imports and update landing page

--- a/apps/docs/content/docs/solid/index.mdx
+++ b/apps/docs/content/docs/solid/index.mdx
@@ -4,7 +4,7 @@ description: A powerful library for creating flexible Stepper components in Soli
 icon: Album
 ---
 
-# Stepperize: Simplifying Multi-Step Processes in Solid JS
+# Simplifying Multi-Step Processes in Solid JS
 
 Stepperize is a versatile Solid JS library designed to streamline the creation of Stepper components. It empowers developers to build complex, multi-step processes with ease, allowing them to focus on business logic rather than implementation details.
 
