--- a/apps/docs/content/docs/vue/index.mdx
+++ b/apps/docs/content/docs/vue/index.mdx
@@ -4,7 +4,7 @@ description: A powerful library for creating flexible Stepper components in Vue
 icon: Album
 ---
 
-# Stepperize: Simplifying Multi-Step Processes in Vue
+# Simplifying Multi-Step Processes in Vue
 
 Stepperize is a versatile Vue library designed to streamline the creation of Stepper components. It empowers developers to build complex, multi-step processes with ease, allowing them to focus on business logic rather than implementation details.
 
