chore: update documentation imports and enhance stepper components - Updated import paths and hashes in index.ts for Vue and React documentation. - Added new examples and installation instructions for stepper components in the documentation. - Changed background color for stepper panels to use `bg-secondary` and `text-secondary-foreground` for better styling consistency.

--- a/apps/docs/content/docs/react/shadcn/examples.mdx
+++ b/apps/docs/content/docs/react/shadcn/examples.mdx
@@ -86,3 +86,15 @@ npx shadcn add https://stepperize.vercel.app/r/stepper-with-responsive-variant.j
 ```bash
 npx shadcn add https://stepperize.vercel.app/r/stepper-with-tracking.json
 ```
+
+## Stepper with variants
+
+<OpenInV0 name="stepper-with-variants">
+  <StepperWithVariants />
+</OpenInV0>
+
+### Installation
+
+```bash
+npx shadcn add https://stepperize.vercel.app/r/stepper-with-variants.json
+```
