chore: update registry and documentation - Removed unnecessary dependencies from the stepper component in `registry.json`. - Updated installation instructions in `examples.mdx` to clarify the command for adding examples.

--- a/apps/docs/content/docs/react/shadcn/examples.mdx
+++ b/apps/docs/content/docs/react/shadcn/examples.mdx
@@ -9,7 +9,7 @@ description: Examples for shadcn-stepper
   <StepperDemo />
 </OpenInV0>
 
-### Installation
+Install the example by copying the following command:
 
 ```bash
 npx shadcn add https://stepperize.vercel.app/r/stepper-demo.json
@@ -21,7 +21,7 @@ npx shadcn add https://stepperize.vercel.app/r/stepper-demo.json
   <StepperWithDescription />
 </OpenInV0>
 
-### Installation
+Install the example by copying the following command:
 
 ```bash
 npx shadcn add https://stepperize.vercel.app/r/stepper-with-description.json
@@ -33,7 +33,7 @@ npx shadcn add https://stepperize.vercel.app/r/stepper-with-description.json
   <StepperWithForm />
 </OpenInV0>
 
-### Installation
+Install the example by copying the following command:
 
 ```bash
 npx shadcn add https://stepperize.vercel.app/r/stepper-with-form.json
@@ -45,7 +45,7 @@ npx shadcn add https://stepperize.vercel.app/r/stepper-with-form.json
   <StepperWithIcon />
 </OpenInV0>
 
-### Installation
+Install the example by copying the following command:
 
 ```bash
 npx shadcn add https://stepperize.vercel.app/r/stepper-with-icon.json
@@ -57,7 +57,7 @@ npx shadcn add https://stepperize.vercel.app/r/stepper-with-icon.json
   <StepperWithLabelOrientation />
 </OpenInV0>
 
-### Installation
+Install the example by copying the following command:
 
 ```bash
 npx shadcn add https://stepperize.vercel.app/r/stepper-with-label-orientation.json
@@ -69,7 +69,7 @@ npx shadcn add https://stepperize.vercel.app/r/stepper-with-label-orientation.js
   <StepperWithResponsiveVariant />
 </OpenInV0>
 
-### Installation
+Install the example by copying the following command:
 
 ```bash
 npx shadcn add https://stepperize.vercel.app/r/stepper-with-responsive-variant.json
@@ -81,7 +81,7 @@ npx shadcn add https://stepperize.vercel.app/r/stepper-with-responsive-variant.j
   <StepperWithTracking />
 </OpenInV0>
 
-### Installation
+Install the example by copying the following command:
 
 ```bash
 npx shadcn add https://stepperize.vercel.app/r/stepper-with-tracking.json
@@ -93,7 +93,7 @@ npx shadcn add https://stepperize.vercel.app/r/stepper-with-tracking.json
   <StepperWithVariants />
 </OpenInV0>
 
-### Installation
+Install the example by copying the following command:
 
 ```bash
 npx shadcn add https://stepperize.vercel.app/r/stepper-with-variants.json
