--- a/apps/docs/content/docs/react/shadcn/installation.mdx
+++ b/apps/docs/content/docs/react/shadcn/installation.mdx
@@ -30,9 +30,7 @@ Or install the component manually copying the following code in your project
     import * as React from "react";
 
     import { cn } from "@/lib/utils";
-    import { Button } from "@/components/ui/button";
-
-    //#region Context
+    import { Button } from "@/registry/new-york/ui/button";
 
     const StepperContext = React.createContext<Stepper.ConfigProps | null>(null);
 
@@ -43,10 +41,6 @@ Or install the component manually copying the following code in your project
       }
       return context;
     };
-
-    //#endregion Context
-
-    //#region Define Stepper
 
     const defineStepper = <const Steps extends Stepperize.Step[]>(
       ...steps: Steps
@@ -78,218 +72,216 @@ Or install the component manually copying the following code in your project
       return {
         ...rest,
         useStepper,
-        StepperProvider: ({
-          variant = "horizontal",
-          labelOrientation = "horizontal",
-          tracking = false,
-          children,
-          className,
-          ...props
-        }) => {
-          return (
-            <StepperContext.Provider
-              value={{ variant, labelOrientation, tracking }}
-            >
-              <Scoped
-                initialStep={props.initialStep}
-                initialMetadata={props.initialMetadata}
-              >
-                <StepperContainer className={className} {...props}>
-                  {children}
-                </StepperContainer>
-              </Scoped>
-            </StepperContext.Provider>
-          );
-        },
-        StepperNavigation: ({
-          children,
-          "aria-label": ariaLabel = "Stepper Navigation",
-          ...props
-        }) => {
-          const { variant } = useStepperProvider();
-          return (
-            <nav
-              date-component="stepper-navigation"
-              aria-label={ariaLabel}
-              role="tablist"
-              {...props}
-            >
-              <ol
-                date-component="stepper-navigation-list"
-                className={classForNavigationList({ variant: variant })}
-              >
-                {children}
-              </ol>
-            </nav>
-          );
-        },
-        StepperStep: ({ children, className, icon, ...props }) => {
-          const { variant, labelOrientation } = useStepperProvider();
-          const { current } = useStepper();
-
-          const utils = rest.utils;
-          const steps = rest.steps;
-
-          const stepIndex = utils.getIndex(props.of);
-          const step = steps[stepIndex];
-          const currentIndex = utils.getIndex(current.id);
-
-          const isLast = utils.getLast().id === props.of;
-          const isActive = current.id === props.of;
-
-          const dataState = getStepState(currentIndex, stepIndex);
-          const childMap = useStepChildren(children);
-
-          const title = childMap.get("title");
-          const description = childMap.get("description");
-          const panel = childMap.get("panel");
-
-          if (variant === "circle") {
+        Stepper: {
+          Provider: ({
+            variant = "horizontal",
+            labelOrientation = "horizontal",
+            tracking = false,
+            children,
+            className,
+            ...props
+          }) => {
             return (
-              <li
-                date-component="stepper-step"
-                className={cn(
-                  "flex shrink-0 items-center gap-4 rounded-md transition-colors",
-                  className
-                )}
+              <StepperContext.Provider
+                value={{ variant, labelOrientation, tracking }}
               >
-                <CircleStepIndicator
-                  currentStep={stepIndex + 1}
-                  totalSteps={steps.length}
-                />
-                <div
-                  date-component="stepper-step-content"
-                  className="flex flex-col items-start gap-1"
+                <Scoped
+                  initialStep={props.initialStep}
+                  initialMetadata={props.initialMetadata}
                 >
-                  {title}
-                  {description}
-                </div>
-              </li>
+                  <StepperContainer className={className} {...props}>
+                    {children}
+                  </StepperContainer>
+                </Scoped>
+              </StepperContext.Provider>
             );
-          }
-
-          return (
-            <>
-              <li
-                date-component="stepper-step"
-                className={cn([
-                  "group peer relative flex items-center gap-2",
-                  "data-[variant=vertical]:flex-row",
-                  "data-[label-orientation=vertical]:w-full",
-                  "data-[label-orientation=vertical]:flex-col",
-                  "data-[label-orientation=vertical]:justify-center",
-                ])}
-                data-variant={variant}
-                data-label-orientation={labelOrientation}
-                data-state={dataState}
-                data-disabled={props.disabled}
+          },
+          Navigation: ({
+            children,
+            "aria-label": ariaLabel = "Stepper Navigation",
+            ...props
+          }) => {
+            const { variant } = useStepperProvider();
+            return (
+              <nav
+                date-component="stepper-navigation"
+                aria-label={ariaLabel}
+                role="tablist"
+                {...props}
               >
-                <Button
-                  id={`step-${step.id}`}
-                  date-component="stepper-step-indicator"
-                  type="button"
-                  role="tab"
-                  tabIndex={dataState !== "inactive" ? 0 : -1}
-                  className="rounded-full"
-                  variant={dataState !== "inactive" ? "default" : "secondary"}
-                  size="icon"
-                  aria-controls={`step-panel-${props.of}`}
-                  aria-current={isActive ? "step" : undefined}
-                  aria-posinset={stepIndex + 1}
-                  aria-setsize={steps.length}
-                  aria-selected={isActive}
-                  onKeyDown={(e) =>
-                    onStepKeyDown(
-                      e,
-                      utils.getNext(props.of),
-                      utils.getPrev(props.of)
-                    )
-                  }
-                  {...props}
+                <ol
+                  date-component="stepper-navigation-list"
+                  className={classForNavigationList({ variant: variant })}
                 >
-                  {icon ?? stepIndex + 1}
-                </Button>
-                {variant === "horizontal" && labelOrientation === "vertical" && (
+                  {children}
+                </ol>
+              </nav>
+            );
+          },
+          Step: ({ children, className, icon, ...props }) => {
+            const { variant, labelOrientation } = useStepperProvider();
+            const { current } = useStepper();
+
+            const utils = rest.utils;
+            const steps = rest.steps;
+
+            const stepIndex = utils.getIndex(props.of);
+            const step = steps[stepIndex];
+            const currentIndex = utils.getIndex(current.id);
+
+            const isLast = utils.getLast().id === props.of;
+            const isActive = current.id === props.of;
+
+            const dataState = getStepState(currentIndex, stepIndex);
+            const childMap = useStepChildren(children);
+
+            const title = childMap.get("title");
+            const description = childMap.get("description");
+            const panel = childMap.get("panel");
+
+            if (variant === "circle") {
+              return (
+                <li
+                  date-component="stepper-step"
+                  className={cn(
+                    "flex shrink-0 items-center gap-4 rounded-md transition-colors",
+                    className
+                  )}
+                >
+                  <CircleStepIndicator
+                    currentStep={stepIndex + 1}
+                    totalSteps={steps.length}
+                  />
+                  <div
+                    date-component="stepper-step-content"
+                    className="flex flex-col items-start gap-1"
+                  >
+                    {title}
+                    {description}
+                  </div>
+                </li>
+              );
+            }
+
+            return (
+              <>
+                <li
+                  date-component="stepper-step"
+                  className={cn([
+                    "group peer relative flex items-center gap-2",
+                    "data-[variant=vertical]:flex-row",
+                    "data-[label-orientation=vertical]:w-full",
+                    "data-[label-orientation=vertical]:flex-col",
+                    "data-[label-orientation=vertical]:justify-center",
+                  ])}
+                  data-variant={variant}
+                  data-label-orientation={labelOrientation}
+                  data-state={dataState}
+                  data-disabled={props.disabled}
+                >
+                  <Button
+                    id={`step-${step.id}`}
+                    date-component="stepper-step-indicator"
+                    type="button"
+                    role="tab"
+                    tabIndex={dataState !== "inactive" ? 0 : -1}
+                    className="rounded-full"
+                    variant={dataState !== "inactive" ? "default" : "secondary"}
+                    size="icon"
+                    aria-controls={`step-panel-${props.of}`}
+                    aria-current={isActive ? "step" : undefined}
+                    aria-posinset={stepIndex + 1}
+                    aria-setsize={steps.length}
+                    aria-selected={isActive}
+                    onKeyDown={(e) =>
+                      onStepKeyDown(
+                        e,
+                        utils.getNext(props.of),
+                        utils.getPrev(props.of)
+                      )
+                    }
+                    {...props}
+                  >
+                    {icon ?? stepIndex + 1}
+                  </Button>
+                  {variant === "horizontal" && labelOrientation === "vertical" && (
+                    <StepperSeparator
+                      orientation="horizontal"
+                      labelOrientation={labelOrientation}
+                      isLast={isLast}
+                      state={dataState}
+                      disabled={props.disabled}
+                    />
+                  )}
+                  <div
+                    date-component="stepper-step-content"
+                    className="flex flex-col items-start"
+                  >
+                    {title}
+                    {description}
+                  </div>
+                </li>
+
+                {variant === "horizontal" && labelOrientation === "horizontal" && (
                   <StepperSeparator
                     orientation="horizontal"
-                    labelOrientation={labelOrientation}
                     isLast={isLast}
                     state={dataState}
                     disabled={props.disabled}
                   />
                 )}
-                <div
-                  date-component="stepper-step-content"
-                  className="flex flex-col items-start"
-                >
-                  {title}
-                  {description}
-                </div>
-              </li>
 
-              {variant === "horizontal" && labelOrientation === "horizontal" && (
-                <StepperSeparator
-                  orientation="horizontal"
-                  isLast={isLast}
-                  state={dataState}
-                  disabled={props.disabled}
-                />
-              )}
+                {variant === "vertical" && (
+                  <div className="flex gap-4">
+                    {!isLast && (
+                      <div className="flex justify-center ps-[calc(var(--spacing)_*_4.5_-_1px)]">
+                        <StepperSeparator
+                          orientation="vertical"
+                          isLast={isLast}
+                          state={dataState}
+                          disabled={props.disabled}
+                        />
+                      </div>
+                    )}
+                    <div className="my-3 flex-1 ps-4">{panel}</div>
+                  </div>
+                )}
+              </>
+            );
+          },
+          Title,
+          Description,
+          Panel: ({ children, asChild, ...props }) => {
+            const Comp = asChild ? Slot : "div";
+            const { tracking } = useStepperProvider();
 
-              {variant === "vertical" && (
-                <div className="flex gap-4">
-                  {!isLast && (
-                    <div className="flex justify-center ps-5">
-                      <StepperSeparator
-                        orientation="vertical"
-                        isLast={isLast}
-                        state={dataState}
-                        disabled={props.disabled}
-                      />
-                    </div>
-                  )}
-                  <div className="my-3 flex-1 ps-4">{panel}</div>
-                </div>
-              )}
-            </>
-          );
-        },
-        StepperTitle,
-        StepperDescription,
-        StepperPanel: ({ children, asChild, ...props }) => {
-          const Comp = asChild ? Slot : "div";
-          const { tracking } = useStepperProvider();
-
-          return (
-            <Comp
-              date-component="stepper-step-panel"
-              ref={(node) => scrollIntoStepperPanel(node, tracking)}
-              {...props}
-            >
-              {children}
-            </Comp>
-          );
-        },
-        StepperControls: ({ children, className, asChild, ...props }) => {
-          const Comp = asChild ? Slot : "div";
-          return (
-            <Comp
-              date-component="stepper-controls"
-              className={cn("flex justify-end gap-4", className)}
-              {...props}
-            >
-              {children}
-            </Comp>
-          );
+            return (
+              <Comp
+                date-component="stepper-step-panel"
+                ref={(node) => scrollIntoStepperPanel(node, tracking)}
+                {...props}
+              >
+                {children}
+              </Comp>
+            );
+          },
+          Controls: ({ children, className, asChild, ...props }) => {
+            const Comp = asChild ? Slot : "div";
+            return (
+              <Comp
+                date-component="stepper-controls"
+                className={cn("flex justify-end gap-4", className)}
+                {...props}
+              >
+                {children}
+              </Comp>
+            );
+          },
         },
       };
     };
 
-    //#endregion Define Stepper
-
-    //#region Stepper Title
-
-    const StepperTitle = ({
+    const Title = ({
       children,
       className,
       asChild,
@@ -308,11 +300,7 @@ Or install the component manually copying the following code in your project
       );
     };
 
-    //#endregion Stepper Title
-
-    //#region Stepper Description
-
-    const StepperDescription = ({
+    const Description = ({
       children,
       className,
       asChild,
@@ -330,10 +318,6 @@ Or install the component manually copying the following code in your project
         </Comp>
       );
     };
-
-    //#endregion Stepper Description
-
-    //#region Stepper Separator
 
     const StepperSeparator = ({
       orientation,
@@ -361,10 +345,6 @@ Or install the component manually copying the following code in your project
         />
       );
     };
-
-    //#endregion Stepper Separator
-
-    //#region Circle Indicator
 
     const CircleStepIndicator = ({
       currentStep,
@@ -419,10 +399,6 @@ Or install the component manually copying the following code in your project
       );
     };
 
-    //#endregion Circle Indicator
-
-    //#region Styles
-
     const classForNavigationList = cva("flex gap-2", {
       variants: {
         variant: {
@@ -453,10 +429,6 @@ Or install the component manually copying the following code in your project
       }
     );
 
-    //#endregion Styles
-
-    //#region Utils
-
     function scrollIntoStepperPanel(
       node: HTMLDivElement | null,
       tracking?: boolean
@@ -476,9 +448,9 @@ Or install the component manually copying the following code in your project
 
       for (const child of childrenArray) {
         if (React.isValidElement(child)) {
-          if (child.type === StepperTitle) {
+          if (child.type === Title) {
             map.set("title", child);
-          } else if (child.type === StepperDescription) {
+          } else if (child.type === Description) {
             map.set("description", child);
           } else {
             map.set("panel", child);
@@ -531,10 +503,6 @@ Or install the component manually copying the following code in your project
       return "inactive";
     };
 
-    //#endregion Utils
-
-    //#region Types
-
     namespace Stepper {
       export type StepperVariant = "horizontal" | "vertical" | "circle";
       export type StepperLabelOrientation = "horizontal" | "vertical";
@@ -549,30 +517,30 @@ Or install the component manually copying the following code in your project
         Stepperize.StepperReturn<Steps>,
         "Scoped"
       > & {
-        StepperProvider: (
-          props: Omit<Stepperize.ScopedProps<Steps>, "children"> &
-            Omit<React.ComponentProps<"div">, "children"> &
-            Stepper.ConfigProps & {
-              children:
-                | React.ReactNode
-                | ((props: {
-                    methods: Stepperize.Stepper<Steps>;
-                  }) => React.ReactNode);
+        Stepper: {
+          Provider: (
+            props: Omit<Stepperize.ScopedProps<Steps>, "children"> &
+              Omit<React.ComponentProps<"div">, "children"> &
+              Stepper.ConfigProps & {
+                children:
+                  | React.ReactNode
+                  | ((props: {
+                      methods: Stepperize.Stepper<Steps>;
+                    }) => React.ReactNode);
+              }
+          ) => React.ReactElement;
+          Navigation: (props: React.ComponentProps<"nav">) => React.ReactElement;
+          Step: (
+            props: React.ComponentProps<"button"> & {
+              of: Stepperize.Get.Id<Steps>;
+              icon?: React.ReactNode;
             }
-        ) => React.ReactElement;
-        StepperNavigation: (
-          props: React.ComponentProps<"nav">
-        ) => React.ReactElement;
-        StepperStep: (
-          props: React.ComponentProps<"button"> & {
-            of: Stepperize.Get.Id<Steps>;
-            icon?: React.ReactNode;
-          }
-        ) => React.ReactElement;
-        StepperTitle: (props: AsChildProps<"h4">) => React.ReactElement;
-        StepperDescription: (props: AsChildProps<"p">) => React.ReactElement;
-        StepperPanel: (props: AsChildProps<"div">) => React.ReactElement;
-        StepperControls: (props: AsChildProps<"div">) => React.ReactElement;
+          ) => React.ReactElement;
+          Title: (props: AsChildProps<"h4">) => React.ReactElement;
+          Description: (props: AsChildProps<"p">) => React.ReactElement;
+          Panel: (props: AsChildProps<"div">) => React.ReactElement;
+          Controls: (props: AsChildProps<"div">) => React.ReactElement;
+        };
       };
 
       export type CircleStepIndicatorProps = {
@@ -587,9 +555,8 @@ Or install the component manually copying the following code in your project
       asChild?: boolean;
     };
 
-    //#endregion Types
-
     export { defineStepper };
+
     ```
 
   </Step>
