chore: update documentation imports and enhance descriptions - Reorganized import paths for React, Vue, and Solid documentation files to reflect the new structure. - Enhanced descriptions in `introduction.mdx` and `examples.mdx` for better clarity and context. - Cleaned up unused imports to streamline the codebase.

--- a/apps/docs/content/docs/react/shadcn/examples.mdx
+++ b/apps/docs/content/docs/react/shadcn/examples.mdx
@@ -1,6 +1,6 @@
 ---
 title: Open in v0
-description: Examples for shadcn-stepper
+description: Examples for shadcn-stepper with v0
 ---
 
 ## Stepper demo
