--- a/apps/docs/content/docs/react/shadcn/introduction.mdx
+++ b/apps/docs/content/docs/react/shadcn/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: Introduction to shadcn-stepper
+description: Discover shadcn-stepper, a powerful and customizable stepper component for shadcn/ui projects
 ---
 
 ## What is shadcn-stepper?
