fix: update import statement for Stepper component in installation documentation - Changed import from `Stepper` to `defineStepper` for accuracy in usage. - Updated documentation to include a link to the component API references for better navigation.

--- a/apps/docs/content/docs/react/shadcn/installation.mdx
+++ b/apps/docs/content/docs/react/shadcn/installation.mdx
@@ -563,10 +563,10 @@ Or install the component manually copying the following code in your project
   <Step>
     ### Import the component
 
-    That's it! You can now use the component in your project following the component API references
+    That's it! You can now use the component in your project following the [component API references](/docs/react/shadcn/api).
 
     ```tsx
-    import { Stepper } from "@/components/ui/stepper";
+    import { defineStepper } from "@/components/ui/stepper";
     ```
 
   </Step>
