fix: update import path for Button component in installation documentation

--- a/apps/docs/content/docs/react/shadcn/installation.mdx
+++ b/apps/docs/content/docs/react/shadcn/installation.mdx
@@ -30,7 +30,7 @@ Or install the component manually copying the following code in your project
     import * as React from "react";
 
     import { cn } from "@/lib/utils";
-    import { Button } from "@/registry/new-york/ui/button";
+    import { Button } from "@/components/ui/button";
 
     const StepperContext = React.createContext<Stepper.ConfigProps | null>(null);
 
