fix: Add type="button" to shadcn docs

--- a/apps/docs/content/docs/react/shadcn/api.mdx
+++ b/apps/docs/content/docs/react/shadcn/api.mdx
@@ -191,6 +191,7 @@ export function MyFirstStepper() {
           <Stepper.Controls>
             {!methods.isLast && (
               <Button
+                type="button"
                 variant="secondary"
                 onClick={methods.prev}
                 disabled={methods.isFirst}
