--- a/apps/docs/content/docs/react/api-references/schema-validation.mdx
+++ b/apps/docs/content/docs/react/api-references/schema-validation.mdx
@@ -3,7 +3,7 @@ title: Schema Validation
 description: Learn how to validate your stepper with any schema library
 ---
 
-Stepperize provides a way to validate your steps with any schema library.
+Stepperize provides a way to add schemas to your steps with any schema library.
 
 Let's see how we can create our validation schemas and have them within our stepper.
 
