--- a/apps/docs/content/docs/react/api-references/schema-validation.mdx
+++ b/apps/docs/content/docs/react/api-references/schema-validation.mdx
@@ -3,7 +3,7 @@ title: Schema Validation
 description: Learn how to validate your stepper with any schema library
 ---
 
-Stepperize provides a way to add schemas to your steps with any schema library.
+Stepperize provides a way to add schemas to your steps with any schema library. This is very useful for working with forms and libraries such as React Hook Form, Conform, etc.
 
 Let's see how we can create our validation schemas and have them within our stepper.
 
@@ -69,7 +69,7 @@ const stepperInstance = defineStepper({
 
 ## Working with multiple schemas and steps
 
-Let's say we have a series of steps in the form of forms, each of which has a validation schema. All you have to do is add the schemas with the key of your choice, and that's it.
+Let's say we have a series of steps and we will use them with forms, each of which has a validation schema. All you have to do is add the schemas with the key of your choice, and that's it.
 
 Let's see how it works in a practical example with Zod.
 
