add Activity example

--- a/apps/docs/content/docs/react/shadcn/examples.mdx
+++ b/apps/docs/content/docs/react/shadcn/examples.mdx
@@ -15,6 +15,18 @@ Install the example by copying the following command:
 npx shadcn add https://stepperize.vercel.app/r/stepper-demo.json
 ```
 
+## Stepper with `<Activity>`
+
+<OpenInV0 name="stepper-with-activity">
+  <StepperWithActivity />
+</OpenInV0>
+
+Install the example by copying the following command:
+
+```bash
+npx shadcn add https://stepperize.vercel.app/r/stepper-with-activity.json
+```
+
 ## Stepper with description
 
 <OpenInV0 name="stepper-with-description">
