chore: update dependencies and configuration files
- Updated Biome schema version in biome.json to 2.3.11.
- Updated package versions in package.json, including pnpm to 10.28.0 and solid-js to 1.9.10.
- Updated various dependencies in pnpm-lock.yaml.
- Adjusted Tailwind CSS version in apps/docs/package.json to 4.1.18.
- Made minor formatting changes in several component files for consistency.
- Removed unused language-toggle component.
- Updated stepper demo components and their respective pages for better structure and clarity.

--- a/apps/docs/content/docs/react/shadcn/installation.mdx
+++ b/apps/docs/content/docs/react/shadcn/installation.mdx
@@ -106,7 +106,6 @@ Or install the component manually copying the following code in your project
               <nav
                 date-component="stepper-navigation"
                 aria-label={ariaLabel}
-                role="tablist"
                 {...props}
               >
                 <ol
@@ -234,7 +233,7 @@ Or install the component manually copying the following code in your project
                 {variant === "vertical" && (
                   <div className="flex gap-4">
                     {!isLast && (
-                      <div className="flex justify-center ps-[calc(var(--spacing)_*_4.5_-_1px)]">
+                      <div className="flex justify-center ps-[calc(var(--spacing)*4.5-1px)]">
                         <StepperSeparator
                           orientation="vertical"
                           isLast={isLast}
@@ -334,12 +333,11 @@ Or install the component manually copying the following code in your project
         return null;
       }
       return (
-        <div
+        <hr
           date-component="stepper-separator"
           data-orientation={orientation}
           data-state={state}
           data-disabled={disabled}
-          role="separator"
           tabIndex={-1}
           className={classForSeparator({ orientation, labelOrientation })}
         />
